Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15907 closed bug (fixed)

bug: can't set Spain, Portugal nor Ecuador timezones under Time

Reported by: Morgul Owned by: nobody
Priority: high Milestone: R1/beta2
Component: Preferences/Time & Date Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Under Time application, on the latest git and nightly versions, it's impossible to set any of the Spain timezones, nor the ordinary timezones for Portugal an Ecuador.

What happens is those timezones when selected have their button either disabled or not working, and the time preview section shows no timezone and no time either.

I found the cause and wrote a clean fix for it.

The issue comes from the code that "flattens" countries with exactly one timezone subitem, so they appear on the list as a single item. That code would force taking the timezone from the parent, even when it had no timezone, therefore overriding the only good timezone those aforementioned country items had, on the sibling.

I changed it to only take the parent timezone if the parent actually has a timezone, therefore leaving the timezone from the sibling otherwise, whether it has one or not (if neither parent nor sibling had a timezone, it wouldn't work anyway, as that code couldn't guess a totally non-specified timezone).

Attachments (1)

Time_fixForCountriesWithoutTimezoneWithOneSubitem.patch (724 bytes ) - added by Morgul 5 years ago.
Patch to cleanly fix this issue

Download all attachments as: .zip

Change History (3)

by Morgul, 5 years ago

Patch to cleanly fix this issue

comment:1 by waddlesplash, 5 years ago

Resolution: fixed
Status: newclosed

Patch merged in hrev54092. Thanks!

comment:2 by nielx, 5 years ago

Milestone: R1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.