Time: Fix flattening of countries with one subitem and no timezone on the parent.

Fixes #15907.

Change-Id: I10d81ca92539b3430607c10ebaa9fe7f1080ef0b
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2517
Reviewed-by: Adrien Destugues <pulkomandy@gmail.com>